# aoc2020

./: Cargo.toml  gen.py
src/: main.rs  rf.rs
src/day1/: mod.rs
src/day11/: mod.rs
src/day2/: mod.rs
src/day3/: mod.rs
src/day4/: mod.rs
src/day5/: mod.rs
src/day6/: mod.rs
src/day7/: mod.rs
src/day8/: mod.rs
src/day9/: mod.rs
