[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Akida31 <47895118+Akida31@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.0"

[[bin]]
name = "day1"
path = "src/day1/mod.rs"
[[bin]]
name = "day2"
path = "src/day2/mod.rs"
[[bin]]
name = "day3"
path = "src/day3/mod.rs"
[[bin]]
name = "day4"
path = "src/day4/mod.rs"
[[bin]]
name = "day5"
path = "src/day5/mod.rs"
[[bin]]
name = "day6"
path = "src/day6/mod.rs"
[[bin]]
name = "day7"
path = "src/day7/mod.rs"
[[bin]]
name = "day8"
path = "src/day8/mod.rs"
[[bin]]
name = "day9"
path = "src/day9/mod.rs"
[[bin]]
name = "day11"
path = "src/day11/mod.rs"
